--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="ca">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Celler de Mites</title>
   </head>
   <body>
+    <img src="./images/logo_sundrop.png" alt="Sundrop Entertainment Logo" height="310" width="320">
+    <h1>Sundrop Entertainment</h1>
     
     <script type="module" src="/main.js"></script>
   </body>
