Change background color and align elements to center

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="ca">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Celler de Mites</title>
   </head>
   <body>
-    <img src="./images/logo_sundrop.png" alt="Sundrop Entertainment Logo" height="310" width="320">
+    <div class="container-screen1">
+    <img class="logo" src="./images/logo_sundrop.png" alt="Sundrop Entertainment Logo" height="310" width="320">
     <h1>Sundrop Entertainment</h1>
-    
+  </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
