Update div classes for clarity, adjust css for better consistency

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Celler de Mites</title>
   </head>
   <body>
-    <div class="container-screen1">
-    <img class="logo" src="./images/logo_sundrop.png" alt="Sundrop Entertainment Logo" height="310" width="320">
-    <h1>Sundrop Entertainment</h1>
-  </div>
+    
+    <div class="container-splash" id="splash1">
+      <div class="splash-content">
+        <img class="logo" src="./images/logo_sundrop.png" alt="Sundrop Entertainment Logo" height="310" width="320">
+        <h1>Sundrop Entertainment</h1>
+      </div>
+   </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
