Add second splash screen

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
   </head>
   <body>
     
-    <div class="container-splash" id="splash1">
+    <div class="container-splash" id="splash1"> <!--First Splash Screen-->
       <div class="splash-content">
         <img class="logo" src="./images/logo_sundrop.png" alt="Sundrop Entertainment Logo" height="310" width="320">
         <h1>Sundrop Entertainment</h1>
       </div>
+   </div>
+
+   <div class="splash-container" id="splash2"> <!--Second Splash Screen-->
+    <div class="splash-content">
+      <p class="logo-start">Click to Start!</p>
+    </div>
    </div>
 
     <script type="module" src="./main.js"></script>
