Implement Phaser 3 correctly into the project and add transition between 2 screens

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
   </head>
   <body>
     
-    <div class="container-splash" id="splash1"> <!--First Splash Screen-->
+    <div class="splash-container" id="splash1"> <!--First Splash Screen-->
       <div class="splash-content">
         <img class="logo" src="./images/logo_sundrop.png" alt="Sundrop Entertainment Logo" height="310" width="320">
         <h1>Sundrop Entertainment</h1>
       </div>
    </div>
 
-   <div class="splash-container" id="splash2"> <!--Second Splash Screen-->
+   <div class="splash-container" id="splash2" style="display: none;"> <!--Second Splash Screen-->
     <div class="splash-content">
       <p class="logo-start">Click to Start!</p>
     </div>
    </div>
 
+   <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
