Move splash screen handling to Phaser

--- a/index.html
+++ b/index.html
@@ -1,27 +1,14 @@
 <!doctype html>
 <html lang="ca">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Celler de Mites</title>
-  </head>
-  <body>
-    
-    <div class="splash-container" id="splash1"> <!--First Splash Screen-->
-      <div class="splash-content">
-        <img class="logo" src="./images/logo_sundrop.png" alt="Sundrop Entertainment Logo" height="310" width="320">
-        <h1>Sundrop Entertainment</h1>
-      </div>
-   </div>
-
-   <div class="splash-container" id="splash2" style="display: none;"> <!--Second Splash Screen-->
-    <div class="splash-content">
-      <p class="logo-start">Click to Start!</p>
-    </div>
-   </div>
-
-   <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
-    <script type="module" src="./main.js"></script>
-  </body>
-</html>
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Celler de Mites</title>
+      <link rel="stylesheet" href="style.css"> 
+    </head>
+    <body>
+      <div id="phaser-container"></div> <!-- Container for Phaser game -->
+      <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
+      <script type="module" src="./main.js"></script> 
+    </body>
+  </html>
