--- a/cellerDeMitesTrailer.html
+++ b/cellerDeMitesTrailer.html
@@ -31,7 +31,10 @@
 								<span class="image main"><img src="images/cellerDeMitesLogo.jpg" alt="" /></span>
 								<h2>Tràiler de la demo del joc "Celler de Mites"</h2>
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/6fc1Q2RVHhQ?si=XrwUTZZ0yt1jc0F3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-								</section>
+								<ul class="actions">
+									<li><a href="https://sundropentertainment.github.io/Celler_de_mites/" class="button">Torna enrere</a></li>
+								</ul>								
+							</section>
 							<!-- <section id="content" class="main">
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
 								<h2>Magna feugiat lorem</h2>
@@ -48,11 +51,11 @@
 						<section>
 							<h2>Descarrega't el joc!</h2>
 							<ul class="actions">
-								<li><a href="#" class="button">Descarrega</a></li>
+								<li><a href="https://github.com/sundropentertainment/Celler_de_mites/releases/tag/v0.1" class="button">Descarrega</a></li>
 							</ul>
 						</section>
 						<section>
-							<h2>Contacte/h2>
+							<h2>Contacte</h2>
 							<dl class="alt">
 								<dt>Email</dt>
 								<dd><a href="#">sundropentertainment@gmail.com</a></dd>
