--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Celler de Mites/h2>
+											<h2>Celler de Mites</h2>
 										</header>
 										<p>"Celler de Mites" és un joc de novel·la visual desenvolupat per Sundrop Entertainment i basat lliurement en "Coffee Talk", que es va publicar el gener de 2020 i està ambientat en una versió alternativa de Seattle, on els humans conviuen amb criatures de fantasia com els elfs, orcs, sirenes i vampirs.  El joc se centra al voltant d'una bar de pocions, on el jugador assumeix el paper d'un barman que serveix begudes mentre escolta les històries i els problemes dels clients i mentre apren sobre el català i Catalunya, especialment els seus mites i les característiques lingüístiques.</p>
 										<ul class="actions">
@@ -72,16 +72,17 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="https://docs.google.com/document/d/1BVjXn4rUDKDljvr6jKyUP0J-Rg4ub9KJtY7e5jvGla4/edit?usp=sharing" class="button">GDD del joc</a></li>
 									</ul>
 								</footer>
 							</section>
 
 						<!-- Second Section -->
 							<section id="second" class="main special">
+								<span class="image"><img src="images/SundropLogo.jpg" alt="" /></span>
 								<header class="major">
 									<h2>Sobre l'equip</h2>
-									<p>L'equip el formem 4 estudiants universitàries del CITM-UPC</p>
+									<p>L'equip de Sundrop Entertainment el formem 4 estudiants universitàries del CITM-UPC</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
@@ -113,9 +114,9 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Premis Ludi</h2>
-									<p><strong>3Cat connecta el talent en creació de videojocs</strong><br />
-									Els Premis Ludi 2024 proposen un nou repte amb continguts d'interès clau i valors fonamentals, i estimulen la creació de prototips de videojocs que el resolguin.<br />
-									Els participants, estudiants de grau superior, poden presentar-hi les seves propostes tant individualment com en grups i, a més de guanyar premis, formar comunitat.<br />
+									<p><strong>3Cat connecta el talent en creació de videojocs</strong><br /><br />
+									Els Premis Ludi 2024 proposen un nou repte amb continguts d'interès clau i valors fonamentals, i estimulen la creació de prototips de videojocs que el resolguin.<br /><br />
+									Els participants, estudiants de grau superior, poden presentar-hi les seves propostes tant individualment com en grups i, a més de guanyar premis, formar comunitat.<br /><br />
 									Amb els patrocinadors, de primer nivell internacional, i el jurat, representatiu de l'ecosistema català, coneixerem els guanyadors en una gala inoblidable.</p>
 								</header>
 								<footer class="major">
